--- a/week02/holigray.html
+++ b/week02/holigray.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Document</title>
     <meta
       name="description"
       content="A common layout on the web called the 'holy grail'"
-    />
-    <meta name="author" content="Santiago Bergerat" />
+    >
+    <meta name="author" content="Santiago Bergerat" >
   </head>
 
   <body>
@@ -61,7 +61,7 @@
         src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/800x500/aba-nigeria-temple-lds-273999-wallpaper.jpg"
         alt="Aba Nigeria Temple"
         width="200"
-      />
+      >
     </aside>
 
     <footer>Santiago Bergerat</footer>
