--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <meta
       name="description"
-      content="A common layout on the web called the 'holy grail'"
-    >
-    <meta name="author" content="Santiago Bergerat" >
+      content="A common layout on the web called the 'holy grail'">
+    <meta name="author" content="Santiago Bergerat">
   </head>
 
   <body>
