--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A page about the holy grail | Bergerat Santiago</title>
-    <meta
-      name="description"
-      content="A common layout on the web called the 'holy grail'">
+    <title>Holy Grail Layout - Web Design Example | Santiago Bergerat</title>
+    <meta name="description" content="Learn about the Holy Grail Layout, a common web design structure">
     <meta name="author" content="Santiago Bergerat">
   </head>
 
