--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -16,25 +16,18 @@
     <nav>
       <ul>
         <li>
-          <a
-            href="https://www.nasa.gov/images/"
-            aria-label="
-                Images about space, by NASA"
-            target="_blank"
-            >Space images, by NASA</a
-          >
+          <a href="https://www.nasa.gov/images/" aria-label="Images about space, by NASA" target="_blank">
+            Space images, by NASA
+          </a>
         </li>
         <li>
-          <a
-            href="https://www.linkedin.com/in/santiago-bergerat-797b7b1ba"
-            aria-label="Profile Linkedin"
-            target="_blank"
-          >
-            My Linkedin profile</a
-          >
+          <a href="https://www.linkedin.com/in/santiago-bergerat-797b7b1ba" aria-label="Profile Linkedin" target="_blank">
+            My Linkedin profile
+          </a>
         </li>
       </ul>
     </nav>
+    
 
     <main>
       <section>
