"added new changes"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Santiago Bergerat | WDD 130</title>
+    <meta name="author" content="Santiago Bergerat">
+    <meta name="description" content=" Personal webpage of Santiago Bergerat, a Software Development student at BYU-Pathway Worldwide. Learn more about my journey, projects, and studies.">
+    <title>Bergerat Sergio Santiago | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
 
   </head>
@@ -23,6 +25,12 @@
         <img src="images/santiago-bergerat-profile.webp" alt="Hello my name is Santiago Bergerat about perfil" width="200">
         <p>I am currently a student in the Software Development Bachelor's program at BYU-Pathway Worldwide, where I strengthen my technical skills and explore new technologies. </p>
     </main>
+
+    <aside>
+      <h2>San Rafael , Mendoza</h2>
+      <img src="images/aside-images/mendoza-turismo.webp" alt="tourism in mendoza, argentina">
+      <p>San Rafael, located in the southern region of Mendoza Province, Argentina, is a city that combines stunning natural landscapes with a diversified economy. Nestled between the Diamante and Atuel rivers, the area boasts tourist attractions such as the Atuel Canyon and Valle Grande reservoir, ideal for adventure activities and ecotourism. The local economy is supported by agriculture, notably viticulture with numerous renowned wineries, as well as industry and commerce. The semi-arid climate features marked seasonal variations, with hot summers and cool winters, favoring a variety of crops. The city blends urban areas with rural zones, offering a range of landscapes from mountains and valleys to fertile plains, reflecting a unique geographical and cultural richness.</p>
+    </aside>
 
     <footer>
         <p>&copy; 2025 🌲🏔️ Santiago Bergerat 🌲🏔️ San Rafael, Argentina</p>
