"change name image"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <meta name="author" content="Santiago Bergerat">
+    <meta name="author" content="Bergerat Sergio Santiago">
     <meta name="description" content=" Personal webpage of Santiago Bergerat, a Software Development student at BYU-Pathway Worldwide. Learn more about my journey, projects, and studies.">
     <title>Bergerat Sergio Santiago | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
@@ -22,7 +22,7 @@
 
     <main>
         <h1>Bergerat Sergio Santiago |  WDD 130 </h1>
-        <img src="images/santiago-bergerat-profile.webp" alt="Hello my name is Santiago Bergerat about perfil" width="200">
+        <img src="/images/profile.webp" alt="Santiago Bergerat  profile" width="200">
         <p>I am currently a student in the Software Development Bachelor's program at BYU-Pathway Worldwide, where I strengthen my technical skills and explore new technologies. </p>
     </main>
 
