--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <aside>
       <h2>San Rafael , Mendoza</h2>
-      <img src="images/aside-images/mendoza-turismo.webp" alt="tourism in mendoza, argentina">
+      <img src="images/aside-images/mendoza-turismo.webp" alt="tourism in mendoza, argentina"  width="200">
       <p>San Rafael, located in the southern region of Mendoza Province, Argentina, is a city that combines stunning natural landscapes with a diversified economy. Nestled between the Diamante and Atuel rivers, the area boasts tourist attractions such as the Atuel Canyon and Valle Grande reservoir, ideal for adventure activities and ecotourism. The local economy is supported by agriculture, notably viticulture with numerous renowned wineries, as well as industry and commerce. The semi-arid climate features marked seasonal variations, with hot summers and cool winters, favoring a variety of crops. The city blends urban areas with rural zones, offering a range of landscapes from mountains and valleys to fertile plains, reflecting a unique geographical and cultural richness.</p>
     </aside>
 
