--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
         <h1>Bergerat Sergio Santiago |  WDD 130 </h1>
-        <img src="/images/profile.webp" alt="Santiago Bergerat  profile" width="200">
+        <img src="images/profile.webp" alt="Santiago Bergerat  profile" width="200">
         <p>I am currently a student in the Software Development Bachelor's program at BYU-Pathway Worldwide, where I strengthen my technical skills and explore new technologies. </p>
     </main>
 
