added new section with ul

--- a/index.html
+++ b/index.html
@@ -3,40 +3,114 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <meta name="author" content="Bergerat Sergio Santiago">
-    <meta name="description" content=" Personal webpage of Santiago Bergerat, a Software Development student at BYU-Pathway Worldwide. Learn more about my journey, projects, and studies.">
+    <meta name="author" content="Bergerat Sergio Santiago" >
+    <meta
+      name="description"
+      content=" Personal webpage of Santiago Bergerat, a Software Development student at BYU-Pathway Worldwide. Learn more about my journey, projects, and studies."
+    >
     <title>Bergerat Sergio Santiago | WDD 130</title>
-    <link rel="stylesheet" href="styles/styles.css">
-
+    <link rel="stylesheet" href="styles/styles.css" >
   </head>
   <body>
-
-
     <header>
       <nav>
-        <a aria-label="Visit the Home" href="#" >Home </a>
-        <a aria-label="Visit the Rafting Website" href="wwr/" >Rafting Website </a>
+        <a aria-label="Visit the Home" href="#">Home </a>
+        <a aria-label="Visit the Rafting Website" href="wwr/"
+          >Rafting Website
+        </a>
+        <a aria-label="Visit linkedin profile" href="https://www.linkedin.com/in/santiago-bergerat-797b7b1ba/" title="linkedin profile">Profile Linkedin </a>
+        <a aria-label="Visit my facebook" href="https://www.facebook.com/sergiosantiago.bergerat?locale=es_LA" title="my profile in facebook">Profile Facebook </a>
 
       </nav>
     </header>
 
     <main>
-        <h1>Bergerat Sergio Santiago |  WDD 130 </h1>
-        <img src="images/profile.webp" alt="Santiago Bergerat  profile" width="200">
-        <p>I am currently a student in the Software Development Bachelor's program at BYU-Pathway Worldwide, where I strengthen my technical skills and explore new technologies. </p>
+      <h1>Bergerat Sergio Santiago | WDD 130</h1>
+      <img
+        src="images/profile.webp"
+        alt="Santiago Bergerat  profile"
+        width="200"
+      />
+      <p>
+        I am currently a student in the Software Development Bachelor's program
+        at BYU-Pathway Worldwide, where I strengthen my technical skills and
+        explore new technologies. My coursework has provided me with a solid
+        foundation in programming, web development, and software engineering
+        principles, allowing me to build scalable and efficient solutions.
+      </p>
+      <p>
+        Beyond my studies, I am passionate about continuous learning and
+        personal growth. I enjoy tackling coding challenges, collaborating on
+        projects, and staying up to date with the latest industry trends. My
+        goal is to develop innovative applications that enhance user experiences
+        and solve real-world problems effectively.
+      </p>
+      <p>
+        I am particularly interested in front-end and back-end development, as
+        well as cloud computing and database management. As I advance in my
+        academic journey, I am eager to apply my knowledge in professional
+        settings, contribute to meaningful projects, and expand my expertise in
+        the ever-evolving world of technology.
+      </p>
+
+      <ul class="box">
+        <li>
+          <a
+            href="https://www.churchofjesuschrist.org/temples/details/cordoba-argentina-temple?lang=eng"
+            target="_blank"
+            title="Cordoba Argentina Temple"
+            rel="noopener"
+            >Córdoba Argentina Temple</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?lang=eng"
+            target="_blank"
+            title="Buenos Argentina Temple"
+            rel="noopener"
+            >Buenos Aires Argentina Temple</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.churchofjesuschrist.org/temples/details/mendoza-argentina-temple?lang=eng"
+            target="_blank"
+            title="Mendoza Argentina Temple"
+            rel="noopener"
+            >Mendoza Argentina Temple</a
+          >
+        </li>
+      </ul>
     </main>
 
-    <aside>
+    <aside class="box">
       <h2>San Rafael , Mendoza</h2>
-      <img src="images/aside-images/mendoza-turismo.webp" alt="tourism in mendoza, argentina"  width="200">
-      <p>San Rafael, located in the southern region of Mendoza Province, Argentina, is a city that combines stunning natural landscapes with a diversified economy. Nestled between the Diamante and Atuel rivers, the area boasts tourist attractions such as the Atuel Canyon and Valle Grande reservoir, ideal for adventure activities and ecotourism. The local economy is supported by agriculture, notably viticulture with numerous renowned wineries, as well as industry and commerce. The semi-arid climate features marked seasonal variations, with hot summers and cool winters, favoring a variety of crops. The city blends urban areas with rural zones, offering a range of landscapes from mountains and valleys to fertile plains, reflecting a unique geographical and cultural richness.</p>
+      <img
+        src="images/aside-images/mendoza-turismo.webp"
+        alt="tourism in mendoza, argentina"
+        width="200"
+      />
+      <p>
+        San Rafael, located in the southern region of Mendoza Province,
+        Argentina, is a city that combines stunning natural landscapes with a
+        diversified economy. Nestled between the Diamante and Atuel rivers, the
+        area boasts tourist attractions such as the Atuel Canyon and Valle
+        Grande reservoir, ideal for adventure activities and ecotourism. The
+        local economy is supported by agriculture, notably viticulture with
+        numerous renowned wineries, as well as industry and commerce. The
+        semi-arid climate features marked seasonal variations, with hot summers
+        and cool winters, favoring a variety of crops. The city blends urban
+        areas with rural zones, offering a range of landscapes from mountains
+        and valleys to fertile plains, reflecting a unique geographical and
+        cultural richness.
+      </p>
     </aside>
 
     <footer>
-        <p>&copy; 2025 🌲🏔️ Santiago Bergerat 🌲🏔️ San Rafael, Argentina</p>
+      <p>&copy; 2025 🌲🏔️ Santiago Bergerat 🌲🏔️ San Rafael, Argentina</p>
     </footer>
-
-
-
   </body>
+
+  <!-- last modification : TUESDAY 18/03/2025 -->
 </html>
