added footer id

--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -165,7 +165,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#banner-box">Banner</a></li>
             <li><a href="#product-gallery">Galería</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="#footer">Contacto</a></li>
           </ul>
         </div>
       </div>
