added some fixes

--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -142,8 +142,8 @@
         <div class="footer-section">
           <h3>Contacto</h3>
           <p>Email: contacto@ejemplo.com</p>
-          <p>Teléfono: +54 9 1234-5678</p>
-          <p>Dirección: Calle Falsa 123, Ciudad, País</p>
+          <p>Phone: +54 9 1234-5678</p>
+          <p>Direction: Calle Falsa 123, Ciudad, País</p>
         </div>
 
         <div class="footer-section">
@@ -171,7 +171,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2025 Nombre del Proyecto. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Wireframe 2 HTML. Todos los derechos reservados.</p>
       </div>
     </footer>
   </body>
