--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,8 +13,10 @@
       content="rafting, whitewater rafting, adventure tours, outdoor sports, guided trips"
     />
     <title>About Us - Rafting Adventure</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  
     <link rel="stylesheet" href="styles/rafting.css" />
   </head>
   <body class="container">
