added new changes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </nav>
     </header>
 
+    <div class="grid">
     <main>
       <h1>Bergerat Sergio Santiago | WDD 130</h1>
       <img
@@ -106,7 +107,7 @@
         cultural richness.
       </p>
     </aside>
-
+  </div>
     <footer>
       <p>&copy; 2025 🌲🏔️ Santiago Bergerat 🌲🏔️ San Rafael, Argentina</p>
     </footer>
