added some changes about links and ser

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <header>
       <nav>
-        <a aria-label="Visit the Home" href="#">Home </a>
-        <a aria-label="Visit the Rafting Website" href="wwr/"
+        <a aria-label="Visit the Home" href="index.html">Home </a>
+        <a aria-label="Visit the Rafting Website" href="wwr/about.html"
           >Rafting Website
         </a>
         <a aria-label="Visit linkedin profile" href="https://www.linkedin.com/in/santiago-bergerat-797b7b1ba/" title="linkedin profile">Profile Linkedin </a>
@@ -113,5 +113,5 @@
     </footer>
   </body>
 
-  <!-- last modification : TUESDAY 18/03/2025 -->
+  <!-- last modification : TUESDAY 27/03/2025 -->
 </html>
