--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -30,7 +30,7 @@
         alt="logo rafting team"
       />
       <nav>
-        <a href="../index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="trips.html">Trips</a>
         <a href="contact.html">Contact</a>
